# insound-audio

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  ReadeMe.md  bun.lockb  index.html  package.json  run  tsconfig.json  vite.config.ts
lib/: CMakeLists.txt
lib/fmod/: CMakeLists.txt
lib/fmod/lib/linux/arm64/: libfmodL.so.13.20
public/: demo.fsb
scripts/: FileWatcher.py  __init__.py
src/: CMakeLists.txt  bindings.cpp  main.cpp
src/bindings/: CMakeLists.txt
src/bindings/web/: CMakeLists.txt  README.md  bun.lockb  index.html  package.json  tsconfig.json
src/bindings/web/cpp/: bindings.cpp  main.cpp
src/bindings/web/ts/: main.ts
src/bindings/web/ts/emaudio/: AudioModule.ts  EmBuffer.ts  LuaCallbacks.ts  index.d.ts  types.d.ts
src/cpp/: AudioEngine.cpp  AudioEngine.h  Channel.cpp  Channel.h  FMODError.cpp  FMODError.h  LuaDriver.cpp  LuaDriver.h  MultiTrackAudio.cpp  MultiTrackAudio.h  ParamDesc.h  Parameter.cpp  Parameter.h  SyncPointManager.cpp  SyncPointManager.h  SyncPointMgr.cpp  SyncPointMgr.h  bindings.cpp  common.cpp  common.h  lua.cpp  lua.hpp  main.cpp
src/cpp/params/: ParamDesc.h  ParamDescMgr.h
src/cpp/params/types/: NumberParam.h  StringsParam.h
src/cpp/scripting/: LuaDriver.cpp  Marker.h
src/insound/: AudioClip.cpp  AudioClip.h  AudioEngine.cpp  AudioEngine.h  AudioPool.cpp  AudioPool.h  BankLoadError.h  Bus.cpp  Bus.h  CMakeLists.txt  Channel.cpp  Channel.h  Event.h  EventDescription.Impl.h  EventDescription.cpp  EventDescription.h  FMODError.cpp  FMODError.h  Int24.h  LoopInfo.h  MultiTrackAudio.cpp  MultiTrackAudio.h  MultiTrackControl.cpp  MultiTrackControl.h  MultiTrackControl.lua.cpp  MultiTrackInstance.cpp  MultiTrackInstance.h  PCMDataBank.cpp  PCMDataBank.h  SampleDataInfo.h  SyncPointInfo.h  SyncPointMgr.cpp  SyncPointMgr.h  SyncPointView.cpp  SyncPointView.h  System.cpp  System.h  TrackEventEmitter.h  ValidationError.h  ValidationFieldsError.h  (+2 more)
src/insound/embed/: driver.lua.h
src/insound/errors/: SoundLengthMismatch.h
src/insound/lua/: driver.lua
src/insound/math/: Vec2.h
src/insound/math/curves/: CubicBezierCurve.h  Curve.h  CurveImplementation.cpp  LinearCurve.h  QuadBezierCurve.h
src/insound/params/: ParamDesc.h  ParamDescMgr.h
src/insound/params/types/: NumberParam.h  StringsParam.h
src/insound/presets/: Preset.h  PresetMgr.cpp  PresetMgr.h
src/insound/scripting/: LuaDriver.cpp  LuaDriver.h  LuaError.cpp  LuaError.h  Marker.cpp  Marker.h  lua.cpp
src/insound/v2/: System.h
src/lua/: api-types.lua  driver.lua
src/test/: test-main.js
src/test/cpp/: CMakeLists.txt
src/test/cpp/src/: NumberParam.test.cpp
src/test/src/: test-main.cpp  test.h
src/tools/luac/: CMakeLists.txt
src/ts/: ArrayOps.ts  AudioChannel.ts  AudioConsole.ts  AudioEngine.ts  AudioMarkerMgr.ts  Callback.ts  Conditional.ts  HorizontalSequenceMgr.ts  InsoundAudioModule.d.ts  LinearHashContainer.ts  MarkerMgr.ts  MixPresetMgr.ts  MultiTrackControl.ts  MusicCallbackMgr.ts  ParameterMgr.ts  SignatureTrack.ts  SoundLoadError.ts  SpectrumAnalyzer.ts  SyncCondition.ts  SyncPointMgr.ts  emscripten.ts  index.d.ts  insound-audio.d.ts  main.ts
src/ts/emaudio/: AudioModule.ts  EmBuffer.ts  LuaCallbacks.ts  index.d.ts
src/ts/params/: ParamType.ts  ParameterMgr.ts
src/ts/params/types/: BoolParameter.ts  NumberParameter.ts  ParameterBase.ts  StringsParameter.ts
tools/: CMakeLists.txt
tools/luac/: CMakeLists.txt  main.cpp
